Closed Bug 1683779 Opened 3 years ago Closed 3 years ago

Crash in [@ core::core_arch::x86::sse2::_mm_cvtps_epi32]

Categories

(Core :: Graphics: Color Management, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- wontfix
firefox85 --- wontfix
firefox86 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/a412a5ff-0b59-45e5-8924-4d24b0201220

Reason: SIGILL / ILL_ILLOPN

Top 10 frames of crashing thread:

0 libxul.so core::core_arch::x86::sse2::_mm_cvtps_epi32 /usr/src/rustc-1.43.0/src/stdarch/crates/core_arch/src/x86/sse2.rs:957
1 libxul.so qcms_transform_data_bgra_out_lut_sse2 /build/firefox-guQk7P/firefox-84.0+build3/gfx/qcms/src/transform_sse2.rs:159
2 libxul.so qcms_transform_data /build/firefox-guQk7P/firefox-84.0+build3/gfx/qcms/src/transform.rs:1517
3 libxul.so mozilla::image::ColorManagementFilter<mozilla::image::SwizzleFilter<mozilla::image::SurfaceSink> >::DoAdvanceRowFromBuffer /build/firefox-guQk7P/firefox-84.0+build3/image/SurfaceFilters.h:162
4 libxul.so mozilla::image::nsBMPDecoder::ReadPixelRow /build/firefox-guQk7P/firefox-84.0+build3/image/decoders/nsBMPDecoder.cpp:1113
5 libxul.so mozilla::image::nsBMPDecoder::DoDecode const /build/firefox-guQk7P/firefox-84.0+build3/image/decoders/nsBMPDecoder.cpp:458
6 libxul.so mozilla::image::nsBMPDecoder::DoDecode /build/firefox-guQk7P/firefox-84.0+build3/image/decoders/nsBMPDecoder.cpp:430
7 libxul.so mozilla::image::Decoder::Decode /build/firefox-guQk7P/firefox-84.0+build3/image/Decoder.cpp:172
8 libxul.so mozilla::image::nsICODecoder::FlushContainedDecoder /build/firefox-guQk7P/firefox-84.0+build3/image/decoders/nsICODecoder.cpp:684
9 libxul.so mozilla::image::nsICODecoder::ReadBIH /build/firefox-guQk7P/firefox-84.0+build3/image/decoders/nsICODecoder.cpp:425
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Severity: -- → S3
Priority: -- → P3
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/49e85f1c2f32
Use only rust constructs to detect SSE2/AVX/NEON support. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch

The patch landed in nightly and beta is affected.
:aosmond, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(aosmond)

Ping timeout.

Flags: needinfo?(aosmond)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: