Bug 1683779 - Use only rust constructs to detect SSE2/AVX/NEON support. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D100293