gfx/thebes/gfxPlatform.cpp
@@ -53,9 +53,6 @@
 #include "VRProcessManager.h"
 #include "VRThread.h"
 
-#include "mozilla/SSE.h"
-#include "mozilla/arm.h"
-
 #ifdef XP_WIN
 #  include <process.h>
 #  define getpid _getpid
@@ -2068,16 +2065,6 @@ eCMSMode gfxPlatform::GetCMSMode() {
     if (enableV4) {
       qcms_enable_iccv4();
     }
-#ifdef MOZILLA_MAY_SUPPORT_AVX
-    if (mozilla::supports_avx()) {
-      qcms_enable_avx();
-    }
-#endif
-#ifdef MOZILLA_MAY_SUPPORT_NEON
-    if (mozilla::supports_neon()) {
-      qcms_enable_neon();
-    }
-#endif
     gCMSInitialized = true;
   }
   return gCMSMode;
